--- a/index.html
+++ b/index.html
@@ -338,6 +338,101 @@
             </section>
     </main>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__row">
+                <div class="footer__copyright">
+                    <img src="./img/logo/logo-black.svg" alt="logo" class="footer__logo">
+                    <p class="footer__text">Мы всегда делаем наших клиентов счастливыми, предоставляя максимально большой выбор направлений на рынке.</p>
+                    <ul class="footer__socials">
+                        <li class="footer__socials-item">
+                            <a href="#!" class="footer__socials-link">
+                                <img src="./img/socials/facebook.svg" alt="">
+                            </a>
+                        </li>
+                        <li class="footer__socials-item">
+                            <a href="#!" class="footer__socials-link">
+                                <img src="./img/socials/twitter.svg" alt="">
+                            </a>
+                        </li>
+                        <li class="footer__socials-item">
+                            <a href="#!" class="footer__socials-link">
+                                <img src="./img/socials/instagram.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__nav-wrapper">
+                    <div class="footer__nav">
+                        <h3 class="footer__nav-title">Информация</h3>
+                        <ul class="footer__nav-list">
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">О нас</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Преимущества</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Новости</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Меню</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav">
+                        <h3 class="footer__nav-title">Компания</h3>
+                        <ul class="footer__nav-list">
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Почему мы</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Стать партнером</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">FAQ</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Блог</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav">
+                        <h3 class="footer__nav-title">Поддержка</h3>
+                        <ul class="footer__nav-list">
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Аккаунт</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Центр поддержки</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Отзывы</a>
+                            </li>
+                            <li class="footer__nav-item">
+                                <a href="#!" class="footer__nav-link">Напишите нам</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__subscribe">
+                    <div class="footer__subscribe-title">Подпишись на наши обзоры новых направлений</div>
+                    <form action="" class="subscribe">
+                        <div class="subscribe__input-wrapper">
+                            <input type="email" class="subscribe__input" required>
+                            <label for="" class="subscribe__label">Ваша почта</label>
+                        </div>
+                        <div class="subscribe__btn-wrapper">
+                            <button class="button button--subscribe">
+                                <img src="./img/icons/arrow-right-form.svg" alt="">
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 
 
