add 3D map link to button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 </h1>
                 <button class="button button--huge">
                     <img src="./img/icons/global.svg" alt="">
-                    Просмотреть на 3D карте</button>
+                    <a href="https://yandex.ru/maps/?azimuth=6.237664561871378&l=stv%2Csta&ll=39.469329%2C55.821463&tilt=0.8726646259971648&z=7.17">Просмотреть на 3D карте</a>
+                </button>
             </div>
 
 
