--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/03.jpg" alt="Img">
+                        <img class="card__img" src="./img/popular/03.png" alt="Img">
                         <h3 class="card__title">Исаакиевский собор</h3>
                         <a href="#california" class="card__location">Санкт-Петербург, Россия</a>
                     </article>
@@ -152,7 +152,7 @@
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/06.jpg" alt="Img">
+                        <img class="card__img" src="./img/popular/06.png" alt="Img">
                         <h3 class="card__title">Чкаловская лестница</h3>
                         <a href="#california" class="card__location">Нижний Новгород, Россия</a>
                     </article>
