update some texts

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <img class="card__img card__img--no-margin" src="./img/tips/01.jpg" alt="Img">
                         <div class="card__desc">
                             <h3 class="card__title card__title--big">Горнолыжный курорт красная поляна</h3>
-                            <p class="card__text">Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров</p>
+                            <p class="card__text">Горный курорт развлечений Красная Поляна расположен в предгорье Главного Кавказского хребта. Высокий уровень сервиса, архитектурная утонченность и живописные пейзажи природного заповедника каждый год привлекают на курорт сотни тысяч туристов со всего мира.</p>
                             <footer class="card__footer card__footer--wide">
                                 <a href="#" class="card__footer-link card__footer-link--date">Сегодня</a>
                                 <a href="#" class="card__footer-link card__footer-link--author">Мария Иванова</a>
@@ -273,7 +273,7 @@
                         <img class="card__img card__img--no-margin" src="./img/tips/02.jpg" alt="Img">
                         <div class="card__desc">
                             <h3 class="card__title card__title--big">Нижегородский кремль</h3>
-                            <p class="card__text">Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров</p>
+                            <p class="card__text">Крепость в историческом центре Нижнего Новгорода и его древнейшая часть, главный общественно-политический и историко-художественный комплекс города.</p>
                             <footer class="card__footer card__footer--wide">
                                 <a href="#" class="card__footer-link card__footer-link--date">Сегодня</a>
                                 <a href="#" class="card__footer-link card__footer-link--author">Мария Иванова</a>
@@ -328,7 +328,7 @@
                     <div class="about-us">
                         <div class="about-us__desc">
                             <h3 class="about-us__title">О нас</h3>
-                            <p class="about-us__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a sapien justo. Nulla facilisis tristique imperdiet. Nullam a placerat odio. Sed in ex augue. Aliquam porta consectetur lorem sit amet ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                            <p class="about-us__text">РФтур - компания, созданная группой по-настоящему увеличенных путешествиями людей. Мы знаем все о различных видах активностей и туристических направлений. Помимо этого наша компания предлагает высочайший уровень поддержки и сервиса для своих клиентов. С нами вы можете быть уверены в том, что путешествие пройдет идеально. </p>
                             <div class="about-us__btn">
                                 <a href="#" class="button-more">Читать далее<img src="./img/icons/arrow-more.svg" alt="Arrow"></a>
                             </div>
