--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                         <a href="#" class="nav-list__link nav-list__link--active">Главная</a>
                     </li>
                     <li class="nav-list__item">
-                        <a href="#" class="nav-list__link">Отели</a>
+                        <a href="#" class="nav-list__link">ОтелиQ</a>
                     </li>
                     <li class="nav-list__item">
                         <a href="#" class="nav-list__link">Рестораны</a>
