--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Туры по самым инстересным направлениям</title>
-    <link rel="stylesheet" href="./libs/autoComplete/css/autoComplete.01.css">
-    <link rel="stylesheet" href="./libs/custom-select/custom-select.css">
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
+    <link rel="stylesheet" href="0881b68354ed7968795d.css">
+    <link rel="stylesheet" href="a53c07652f85a303f1f2.css">
+    <link rel="stylesheet" href="af5406bf0e2e9158ffe9.css">
+<script defer src="bundle.js"></script></head>
 <body>
     <header class="header">
         <div class="container container--header">
 
             <nav class="nav">
                 <a href="" class="logo">
-                    <img src="./img/logo/logo.svg" alt="logo">
+                    <img src="843443480602dad2baea.svg" alt="logo">
                 </a>
 
                 <ul class="nav-list">
@@ -47,7 +47,7 @@
                         <span class="user__name">Мария Иванова</span> 
                     </div>
                     <div class="user__avatar">
-                        <img class="user__img" src="./img/header/user.jpg" alt="avatar">
+                        <img class="user__img" src="ac057f4315587c7e7e7f.jpg" alt="avatar">
                     </div>
                 </div>
 
@@ -58,7 +58,7 @@
                     Откройте для себя самые интересные места России
                 </h1>
                 <button class="button button--huge">
-                    <img src="./img/icons/global.svg" alt="">
+                    <img src="460c461ecd1483f4ef86.svg" alt="">
                     <a href="https://yandex.ru/maps/?azimuth=6.237664561871378&l=stv%2Csta&ll=39.469329%2C55.821463&tilt=0.8726646259971648&z=7.17">Просмотреть на 3D карте</a>
                 </button>
             </div>
@@ -97,7 +97,7 @@
                 </div>
 
                 <button class="button button-search">
-                    <img src="./img/icons/search.svg" alt="search">
+                    <img src="818e920fe65722cbdc15.svg" alt="search">
                 </button>
 
 
@@ -117,42 +117,42 @@
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/01.jpg" alt="Img">
+                        <img class="card__img" src="6d26f4aeaa82ddd67ad8.jpg" alt="Img">
                         <h3 class="card__title">Кремль</h3>
                         <a href="#california" class="card__location">Москва, Россия</a>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/02.jpg" alt="Img">
+                        <img class="card__img" src="a812fbdf2a3a7dfe2427.jpg" alt="Img">
                         <h3 class="card__title">Красная поляна</h3>
                         <a href="#california" class="card__location">Сочи, Россия</a>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/03.png" alt="Img">
+                        <img class="card__img" src="17b316fad8fb96329001.png" alt="Img">
                         <h3 class="card__title">Исаакиевский собор</h3>
                         <a href="#california" class="card__location">Санкт-Петербург, Россия</a>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/04.jpg" alt="Img">
+                        <img class="card__img" src="2f726c7b8ff22b390b9a.jpg" alt="Img">
                         <h3 class="card__title">Кул Шариф</h3>
                         <a href="#california" class="card__location">Казань, Россия</a>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/05.jpg" alt="Img">
+                        <img class="card__img" src="889f83e4666e95efada4.jpg" alt="Img">
                         <h3 class="card__title">Родина-мать</h3>
                         <a href="#california" class="card__location">Волгоград, Россия</a>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img" src="./img/popular/06.png" alt="Img">
+                        <img class="card__img" src="e127839c529c6f23c11d.png" alt="Img">
                         <h3 class="card__title">Чкаловская лестница</h3>
                         <a href="#california" class="card__location">Нижний Новгород, Россия</a>
                     </article>
@@ -167,74 +167,74 @@
                     <h2 class="title-1">Отели и рестораны</h2>
                     <a href="#!" class="button-more">
                         Показать все
-                        <img src="./img/icons/arrow-more.svg" alt="Arrow">
+                        <img src="599f610df75cf830f0b8.svg" alt="Arrow">
                     </a>
                 </div>
                 <div class="section__cards section__cards--4-in-row">
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--hotel" src="./img/hotels/01.jpg" alt="Img">
+                        <img class="card__img card__img--hotel" src="841df473122c758a13a2.jpg" alt="Img">
                         <h3 class="card__title card__title--hotel">Raddison Collection Hotel</h3>
 
                         <footer class="card__footer">
                             <a href="#!" class="card__location card__location--icon">Москва, Россия</a>
                             <div class="card__rating">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
                             </div>
                         </footer>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--hotel" src="./img/hotels/02.jpg" alt="Img">
+                        <img class="card__img card__img--hotel" src="cb5b39dd00df9934e622.jpg" alt="Img">
                         <h3 class="card__title card__title--hotel">AZIMUT Смоленская</h3>
 
                         <footer class="card__footer">
                             <a href="#Salerno" class="card__location card__location--icon">Москва, Россия</a>
                             <div class="card__rating">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star-line.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="c4b685ea4792f2b8282f.svg" alt="">
                             </div>
                         </footer>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--hotel" src="./img/hotels/03.jpg" alt="Img">
+                        <img class="card__img card__img--hotel" src="7f288b6cb325961b5340.jpg" alt="Img">
                         <h3 class="card__title card__title--hotel">Рамада Казань Сити Центр</h3>
 
                         <footer class="card__footer">
                             <a href="#Salerno" class="card__location card__location--icon">Казань, Россия</a>
                             <div class="card__rating">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star-line.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="c4b685ea4792f2b8282f.svg" alt="">
                             </div>
                         </footer>
                     </article>
 
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--hotel" src="./img/hotels/04.jpg" alt="Img">
+                        <img class="card__img card__img--hotel" src="1709aa1b8dd8b5393fb5.jpg" alt="Img">
                         <h3 class="card__title card__title--hotel">Риксос Красная Поляна Сочи</h3>
 
                         <footer class="card__footer">
                             <a href="#Salerno" class="card__location card__location--icon">Сочи, Россия</a>
                             <div class="card__rating">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
-                                <img src="./img/icons/star.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
+                                <img src="42d0254a9f793774c739.svg" alt="">
                             </div>
                         </footer>
                     </article>
@@ -250,14 +250,14 @@
                     <h2 class="title-1">Туристические заметки и советы</h2>
                     <a href="#!" class="button-more">
                         Показать все
-                        <img src="./img/icons/arrow-more.svg" alt="Arrow">
+                        <img src="599f610df75cf830f0b8.svg" alt="Arrow">
                     </a>
                 </header>
 
                 <div class="section__cards section__cards--2-in-row">
                     <article class="card card--wide">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--no-margin" src="./img/tips/01.jpg" alt="Img">
+                        <img class="card__img card__img--no-margin" src="8d5287874f88602cc99d.jpg" alt="Img">
                         <div class="card__desc">
                             <h3 class="card__title card__title--big">Горнолыжный курорт красная поляна</h3>
                             <p class="card__text">Горный курорт развлечений Красная Поляна расположен в предгорье Главного Кавказского хребта. Высокий уровень сервиса, архитектурная утонченность и живописные пейзажи природного заповедника каждый год привлекают на курорт сотни тысяч туристов со всего мира.</p>
@@ -270,7 +270,7 @@
                     </article>
                     <article class="card card--wide">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--no-margin" src="./img/tips/02.jpg" alt="Img">
+                        <img class="card__img card__img--no-margin" src="808a8516b40592f9201a.jpg" alt="Img">
                         <div class="card__desc">
                             <h3 class="card__title card__title--big">Нижегородский кремль</h3>
                             <p class="card__text">Крепость в историческом центре Нижнего Новгорода и его древнейшая часть, главный общественно-политический и историко-художественный комплекс города.</p>
@@ -293,29 +293,29 @@
                     <h2 class="title-1">Активности</h2>
                     <a href="#!" class="button-more">
                         Показать все
-                        <img src="./img/icons/arrow-more.svg" alt="Arrow">
+                        <img src="599f610df75cf830f0b8.svg" alt="Arrow">
                     </a>
                 </header>
 
                 <div class="section__cards section__cards--4-in-row">
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--activities" src="./img/activity/01.jpg" alt="Img">
+                        <img class="card__img card__img--activities" src="0118dfea1b96b910a2d9.jpg" alt="Img">
                         <h3 class="card__title">Музеи</h3>
                     </article>
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--activities" src="./img/activity/02.jpg" alt="Img">
+                        <img class="card__img card__img--activities" src="e84038844456f1ca13db.jpg" alt="Img">
                         <h3 class="card__title">Прогулки</h3>
                     </article>
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--activities" src="./img/activity/03.jpg" alt="Img">
+                        <img class="card__img card__img--activities" src="3c93c5cee602ff51d60a.jpg" alt="Img">
                         <h3 class="card__title">Горные лыжи</h3>
                     </article>
                     <article class="card">
                         <a href="#!" class="card__link"></a>
-                        <img class="card__img card__img--activities" src="./img/activity/04.jpg" alt="Img">
+                        <img class="card__img card__img--activities" src="3f2fdd7755f13fe1a130.jpg" alt="Img">
                         <h3 class="card__title">Хайкинг</h3>
                     </article>
                 </div>
@@ -330,10 +330,10 @@
                             <h3 class="about-us__title">О нас</h3>
                             <p class="about-us__text">РФтур - компания, созданная группой по-настоящему увеличенных путешествиями людей. Мы знаем все о различных видах активностей и туристических направлений. Помимо этого наша компания предлагает высочайший уровень поддержки и сервиса для своих клиентов. С нами вы можете быть уверены в том, что путешествие пройдет идеально. </p>
                             <div class="about-us__btn">
-                                <a href="#" class="button-more">Читать далее<img src="./img/icons/arrow-more.svg" alt="Arrow"></a>
+                                <a href="#" class="button-more">Читать далее<img src="599f610df75cf830f0b8.svg" alt="Arrow"></a>
                             </div>
                         </div>
-                        <img src="./img/about-us/about.jpg" alt="" class="about-us__img">
+                        <img src="a2837c1182eee2f6f402.jpg" alt="" class="about-us__img">
                     </div>
                 </div>
             </section>
@@ -343,22 +343,22 @@
         <div class="container">
             <div class="footer__row">
                 <div class="footer__copyright">
-                    <img src="./img/logo/logo-black.svg" alt="logo" class="footer__logo">
+                    <img src="a850b9fd2424233d9eec.svg" alt="logo" class="footer__logo">
                     <p class="footer__text">Мы всегда делаем наших клиентов счастливыми, предоставляя максимально большой выбор направлений на рынке.</p>
                     <ul class="footer__socials">
                         <li class="footer__socials-item">
                             <a href="#!" class="footer__socials-link">
-                                <img src="./img/socials/facebook.svg" alt="">
+                                <img src="71897d4d9a1c8d31d41f.svg" alt="">
                             </a>
                         </li>
                         <li class="footer__socials-item">
                             <a href="#!" class="footer__socials-link">
-                                <img src="./img/socials/twitter.svg" alt="">
+                                <img src="c99dde24768c528503d4.svg" alt="">
                             </a>
                         </li>
                         <li class="footer__socials-item">
                             <a href="#!" class="footer__socials-link">
-                                <img src="./img/socials/instagram.svg" alt="">
+                                <img src="a2065d8cd45071c97ce6.svg" alt="">
                             </a>
                         </li>
                     </ul>
@@ -425,7 +425,7 @@
                         </div>
                         <div class="subscribe__btn-wrapper">
                             <button class="button button--subscribe">
-                                <img src="./img/icons/arrow-right-form.svg" alt="">
+                                <img src="a631987fe4b224ba9ab1.svg" alt="">
                             </button>
                         </div>
                     </form>
@@ -437,11 +437,11 @@
 
 
 
-    <script src="./libs/autoComplete/autoComplete.min.js"></script>
-    <script src="./libs/custom-select/custom-select.min.js"></script>
-    <script src="./libs/easepick/easepick.min.js"></script>
+    <script src="6322e9232521400ff6cb.js"></script>
+    <script src="89aee41205f0477611cc.js"></script>
+    <script src="8b175911712b0c5c0b27.js"></script>
 
-    <script src="./js/inputDest.js"></script>
-    <script src="./index.js"></script>
+    <script src="c31382a72787481b1b9d.js"></script>
+    <script src="a6dc1fdfdd74939a97d6.js"></script>
 </body>
 </html>
