fix nav links hover and add extra route btn  under the form

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                 </button>
             </div>
 
-
+        <div class="form__content">
             <form action="" class="form">
 
                 <div class="form__input-wrapper form__input--location">
@@ -102,6 +102,13 @@
 
 
             </form>
+            <div class="form__extra__btn">
+                <a class="extra__route" href="#!">
+                    <img class="route__img" src="./img/icons/route.png" alt="">
+                    Составной маршрут
+                </a>
+            </div>
+        </div>
         </div>
     </header>
 
