--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,30 @@
             </div>
 
         <div class="form__content">
+            <ul class="nav__list_form">
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">АВИАБИЛЕТЫ</a>
+                    <div class="rectangle"></div>
+                </li>
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">ОТЕЛИ</a>
+                </li>
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">Ж/Д БИЛЕТЫ</a>
+                </li>
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">АВТОБУСЫ</a>
+                </li>
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">ЭКСКУРСИИ</a>
+                </li>
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">АРЕНДА АВТО</a>
+                </li>
+                <li class="nav__list__item">
+                    <a href="" class="nav__list__item__link">КОМАНДИРОВКИ</a>
+                </li>
+            </ul>
             <form action="" class="form">
 
                 <div class="form__input-wrapper form__input--location">
