add mobile app stores section

--- a/src/index.html
+++ b/src/index.html
@@ -465,6 +465,42 @@
         </div>
     </footer>
 
+    <footer class="footer_mobile_apps">
+        <div class="container">
+            <div class="footer__row-apps">
+                <div class="mobile__app">
+                    <h3 class="mobile__app__title">Мобильное приложение</h3>
+                        <ul class="stores__badges">
+                            <li class="stores__badges__item">
+                                <a href="#!" class="stores__badges-link">
+                                    <img class="store__badge__img" src="./img/app-stores/appstore.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="stores__badges__item">
+                                <a href="#!" class="stores__badges-link">
+                                    <img class="store__badge__img" src="./img/app-stores/googleplay.png" alt="">
+                                </a>
+                            </li>
+                            <li class="stores__badges__item">
+                                <a href="#!" class="stores__badges-link">
+                                    <img class="store__badge__img" src="./img/app-stores/rustore.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                </div>
+                <div class="qr__code">
+                    <div class="qr__code__img">
+                        <img src="./img/app-stores/qrcode.svg" alt="" class="qr__code_img">
+                    </div>
+                    <div class="qr__code__desc">
+                        <h3 class="qr_code_title">Быстрая установка приложения</h3>
+                        <p class="qr__code__text">Наведите камеру на QR-код для установки приложения.<br>Нажмите на QR-код для его увеличения.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 
 
