--- a/src/index.html
+++ b/src/index.html
@@ -127,10 +127,10 @@
 
             </form>
             <div class="form__extra__btn">
-                <a class="extra__route" href="#!">
+                <button class="extra__route">
                     <img class="route__img" src="./img/icons/route.png" alt="">
                     Составной маршрут
-                </a>
+                </button>
             </div>
         </div>
         </div>
